--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 </head>
 
 <body>
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link active" href="/#/">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/#/my-grid">Link</a>
-    </li>
-  </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/#/">My ApP</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/#/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/#/my-grid">Grid</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <div id="app"></div>
   </div>
