--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/#/my-grid">Grid</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/#/todo">Todo</a>
+        </li>
       </ul>
     </div>
   </nav>
